--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "start": "gatsby develop",
     "build": "gatsby build",
     "serve": "gatsby serve",
+    "deploy": "yarn run clean && gatsby build && gh-pages -d public -b deploy",
     "clean": "gatsby clean",
     "typecheck": "tsc --noEmit"
   },
@@ -32,6 +33,7 @@
     "@types/node": "^17.0.45",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
+    "gh-pages": "^4.0.0",
     "typescript": "^4.7.4"
   }
 }
